--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/material": "^6.1.10",
+    "@mui/x-date-pickers": "^7.23.0",
+    "dayjs": "^1.11.13",
     "mongoose": "^8.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
