--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@mui/material": "^6.1.10",
     "@mui/x-date-pickers": "^7.23.0",
     "dayjs": "^1.11.13",
+    "html2canvas": "^1.4.1",
     "mongoose": "^8.8.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.1",
+    "twilio": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
