--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/x-date-pickers": "^7.23.0",
     "dayjs": "^1.11.13",
     "html2canvas": "^1.4.1",
+    "html2canvas-pro": "^1.5.8",
     "mongoose": "^8.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
